# adetailer

./: CHANGELOG.md  README.md  install.py  preload.py  pyproject.toml  style.css
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: pypi.yml  stale.yml  test.yml
aaaaaa/: helper.py  ui.py
adetailer/: __init__.py  args.py  common.py  mask.py  mediapipe.py  sam3.py  ultralytics.py
adetailer_custom/: __init__.py  args.py  common.py  mask.py  mediapipe.py  ultralytics.py
adetailer_custom_controlnet_ext/: common.py  controlnet_ext.py  controlnet_ext_forge.py
adetailer_custom_ui/: conditional.py  traceback.py  ui.py
controlnet_ext/: common.py  controlnet_ext.py  controlnet_ext_forge.py
localizations/: ja_JP.json
scripts/: !adetailer.py  !adetailer_custom.py
tests/: test_args.py  test_common.py  test_controlnet_ext.py  test_mask.py  test_mediapipe.py  test_opts.py  test_sam3.py  test_ultralytics.py
