[project]
name = "adetailer-custom"
description = "ADetailer Custom for reForge and Forge Neo."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = [
  "adetailer",
  "adetailer-custom",
  "stable-diffusion",
  "stable-diffusion-webui",
  "reforge",
  "forge-neo",
  "ultralytics",
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "huggingface-hub",
  "mediapipe>=0.10.13",
  "pydantic<3",
  "rich>=13",
  "ultralytics>=8.2",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/IOSakaki/adetailer"

[project.optional-dependencies]
dev = ["devtools"]
test = ["pytest", "hypothesis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "adetailer_custom/__version__.py"

[tool.isort]
profile = "black"
known_first_party = ["adetailer_custom", "adetailer_custom_controlnet_ext", "adetailer_custom_ui", "launch", "modules"]

[tool.ruff]
target-version = "py39"
extend-exclude = ["modules"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PL",
  "PLC",
  "PIE",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "T20",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501", "PLC0415", "PLR2004", "PLW0603"]
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["adetailer_custom", "adetailer_custom_controlnet_ext", "adetailer_custom_ui", "launch", "modules"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
